[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s3ping"
version = "0.1.0"
description = "A modular web scraping library with header, proxy, delay config"

authors = [
  { name = "Zhangwusan", email = "zhangwusan1@email.com" }
]

dependencies = [
  "bs4==0.0.2",
  "cloudscraper==1.2.71",
  "fake-useragent==2.2.0",
  "lxml==5.4.0",
  "selenium==4.33.0",
  "undetected-chromedriver==3.5.5",
  "requests>=2.0"
]

requires-python = ">=3.11"